tests/typechecking/valid/let1.ml
let x=5+5 in
let y=1+x in
let e=x+y+5 in()




