tests/typechecking/invalid/let2.ml
let x= 1.5 +. 5 in
let y=2 + x in
()
